<resources>
    <string name="app_name">Shift &amp; Share</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="registration_text">Registration</string>
    <string name="car_name_text">Car Information</string>
    <string name="car_make_text">2. Make</string>
    <string name="car_model_text">3. Model</string>
    <string name="car_year_text">1. Year</string>
    <string name="register_button">Register</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="edit_vehicles">Edit Vehicles</string>
    <string name="set_password">Set Password</string>
    <string name="new_vehicle_text">New Vehicle</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="reaction_time">Reaction Time:</string>
    <string name="eighth_mile">1/8 Mile:</string>
    <string name="quarter_mile">1/4 Mile:</string>
    <string name="back">Back</string>
    <string name="new_entry">New Entry</string>
    <string name="radius">Radius(mi): </string>
    <string name="default_radius">12</string>
    <string name="instructions_new_entry">Press Start to Record New Time</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="zero">0</string>
    <string name="expand_entry">Expand Entry</string>
</resources>