<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_text"

        android:text="@string/settings"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

<!--PASSWORD CHANGE SECTION-->

    <TextView
        android:id="@+id/change_password_text"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_text"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/old_password_edittext"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/old_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_text"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/new_password_edittext"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/old_password_edittext"
        app:layout_constraintStart_toStartOf="@+id/old_password_edittext"
        app:layout_constraintTop_toBottomOf="@+id/old_password_edittext"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_edittext"
        app:layout_constraintVertical_bias="0.0" />

<!--EDIT CARS SECTION-->
    <TextView
        android:id="@+id/edit_cars_text"

        android:text="@string/edit_vehicles"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password_button"
        app:layout_constraintVertical_bias="0.126" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_cars_text"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/delete_vehicle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/edit_cars_text"
        app:srcCompat="@android:drawable/ic_delete" />

<!--NEW VEHICLE SECTION-->

    <TextView
        android:id="@+id/new_vehicle_textview"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/new_vehicle_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/car_year_text"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/car_year_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/new_vehicle_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_vehicle_textview"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/car_make_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/car_make_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/car_year_text"
        app:layout_constraintStart_toStartOf="@+id/car_year_text"
        app:layout_constraintTop_toBottomOf="@+id/car_year_text"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/car_model_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_model_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/car_make_text"
        app:layout_constraintStart_toStartOf="@+id/car_make_text"
        app:layout_constraintTop_toBottomOf="@+id/car_make_text"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/settings_add_vehicle_button"

        android:text="@string/add_vehicle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_model_text" />

    <Spinner
        android:id="@+id/settings_vehicle_year_spinner"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/car_year_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/car_year_text"
        app:layout_constraintTop_toTopOf="@+id/car_year_text" />

    <Spinner
        android:id="@+id/settings_vehicle_make_spinner"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/car_make_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/car_make_text"
        app:layout_constraintTop_toTopOf="@+id/car_make_text" />

    <Spinner
        android:id="@+id/settings_vehicle_model_spinner"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/car_model_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/car_model_text"
        app:layout_constraintTop_toTopOf="@+id/car_model_text" />


</androidx.constraintlayout.widget.ConstraintLayout>