<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972">

        <Button
            android:id="@+id/submit_new_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="#FFFFFF"

            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicle_select_new_entry"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/cancel_new_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="#FFFFFF"

            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_new_entry" />

        <Spinner
            android:id="@+id/vehicle_select_new_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="410dp"
        android:layout_height="233dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/quarter_text_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/quarter_mile"

            app:layout_constraintBottom_toBottomOf="@+id/quarter_time_new_entry"
            app:layout_constraintEnd_toStartOf="@+id/quarter_time_new_entry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/quarter_time_new_entry"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/eighth_text_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/eighth_mile"

            app:layout_constraintBottom_toBottomOf="@+id/eighth_time_new_entry"
            app:layout_constraintEnd_toStartOf="@+id/eighth_time_new_entry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/eighth_time_new_entry" />

        <TextView
            android:id="@+id/reaction_text_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/reaction_time"

            app:layout_constraintBottom_toBottomOf="@+id/reaction_time_new_entry"
            app:layout_constraintEnd_toStartOf="@+id/reaction_time_new_entry"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/reaction_time_new_entry"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/quarter_time_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/zero"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.696" />

        <TextView
            android:id="@+id/eighth_time_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/zero"

            app:layout_constraintBottom_toTopOf="@+id/quarter_time_new_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reaction_time_new_entry"
            app:layout_constraintVertical_bias="0.552" />

        <TextView
            android:id="@+id/reaction_time_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/zero"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.098" />

        <TextView
            android:id="@+id/quarter_mph_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/zero"

            app:layout_constraintBottom_toBottomOf="@+id/quarter_time_new_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/quarter_time_new_entry"
            app:layout_constraintTop_toTopOf="@+id/quarter_time_new_entry" />

        <TextView
            android:id="@+id/eight_mph_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/zero"

            app:layout_constraintBottom_toBottomOf="@+id/eighth_time_new_entry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/eighth_time_new_entry"
            app:layout_constraintTop_toTopOf="@+id/eighth_time_new_entry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/yellow_image_new_entry"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/black_circle"
            android:importantForAccessibility="no" />

        <ImageView
            android:id="@+id/green_image_new_entry"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@null"
            app:layout_constraintBottom_toTopOf="@+id/start_time_new_entry"
            app:layout_constraintEnd_toEndOf="@+id/yellow_image_new_entry"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/yellow_image_new_entry"
            app:layout_constraintTop_toBottomOf="@+id/yellow_image_new_entry"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/black_circle"
            android:importantForAccessibility="no" />

        <Button
            android:id="@+id/start_time_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/instructions_new_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_new_entry"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/red_image_new_entry"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@null"
            app:layout_constraintBottom_toTopOf="@+id/yellow_image_new_entry"
            app:layout_constraintEnd_toEndOf="@+id/yellow_image_new_entry"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/yellow_image_new_entry"
            app:layout_constraintTop_toBottomOf="@+id/instructions_new_entry"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/black_circle"
            android:importantForAccessibility="no" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>